--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --off-white: #f1f1f1;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  // display: contents;
+  background-color: var(--off-white);
+
+  font-family: 'Montserrat', sans-serif;
+}
