--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,17 @@
-:root {
-  --off-white: #f1f1f1;
-}
-
 body {
-  height: 100vh;
-  width: 100vw;
   margin: 0;
-  // display: contents;
-  background-color: var(--off-white);
+  padding: 0;
+  background-color: #272727;
+  overflow-y: hidden;
 
   font-family: 'Montserrat', sans-serif;
+  // scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  display: none;
 }
