--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,127 +1,14 @@
-@media only screen and (min-width: 600px) {
-
-  .main {
-    display: block;
-    position: fixed;
-    overflow-x: scroll;
-    overflow-y: hidden;
+.main {
+  display: block;
+  position: fixed;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  height: 100vh;
+  width: 100vw;
+  scrollbar-width: none;
+  
+  .content {
     height: 100vh;
-    width: 100vw;
-    
-    .content {
-      height: 100vh;
-      width: 100%;
-      
-      .main-section-container {
-        position: fixed;
-        width: 50vw;
-        height: 100%;
-        display: inline-block;
-
-        .main-section-wrapper {
-          height: 100%;
-          width: 100%;
-
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: space-evenly;
-
-          .title {
-            color: white;
-            font-size: 50px;
-            font-weight: bold;
-          }
-
-          .custom-br {
-            display:block;
-            width: 25%;
-            height: 2px;
-            opacity: 0.3;
-            background-color: #fff;
-          }
-
-          .header {
-            font-size: 40px;
-          
-            .navigation {
-              height: 100%;
-              margin-right: 20px;
-          
-              display: flex;
-              flex-direction: column;
-              align-items: center;
-              justify-content: flex-end;
-          
-              .link {
-                text-decoration: none;
-                color: white;
-                margin: 20px 0;
-              }
-            }
-          }
-        }
-      }
-      
-      .projects-container {
-        display: inline-block;
-        margin-left: 50vw;
-        
-        .projects {
-          position: absolute;
-          top: 0;
-          height: 100%;
-  
-          display: flex;
-          flex-direction: row;
-  
-          .project {
-            position: relative;
-            width: 25vw;
-            height: 100vh;
-            transition: width ease 500ms;
-            list-style: none;
-            
-            &:hover {
-              width: 50vw;
-              height: 100vh;
-            }
-
-            &:hover .project-info {
-              opacity: 0.7;
-              width: 15vh;
-            }
-            
-            .images {
-              height: 100%;
-              width: 100%;
-              object-fit: cover;
-            }
-  
-            .project-info {
-              position: absolute;
-              left: 0;
-              bottom: 0;
-              height: 100%;
-              width: 0;
-
-              display: flex;
-              align-items: center;
-              justify-content: flex-end;
-              padding-bottom: 20px;
-
-              opacity: 0;
-              background-color: black;
-              color: rgba(255,255,255,0.6);
-
-              font-size: 50px;
-              writing-mode: vertical-lr;
-              text-orientation: mixed;
-              transition: opacity 200ms 100ms ease, width 500ms ease;
-            }
-          }
-        }
-      }
-    }
+    width: 100%;
   }
 }
