Added mobile styling

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -26,10 +26,10 @@
         >View in 3D</div>
       </div>
     </li>
-    <li class="item">
+    <li class="item item-colour">
       <img src={{project.titleImage}} class="image"/>
     </li>
-    <li *ngFor="let image of project.images" class="item">
+    <li *ngFor="let image of project.images" class="item item-colour">
       <img src={{image}} class="image"/>
     </li>
   </div>
