--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,14 +1,31 @@
-.main {
-  display: block;
-  position: fixed;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  height: 100vh;
-  width: 100vw;
-  scrollbar-width: none;
-  
-  .content {
+@media only screen and (min-width: 600px) {
+
+  .main {
+    display: block;
+    position: fixed;
+    overflow-x: scroll;
+    overflow-y: hidden;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
+    scrollbar-width: none;
+    
+    .content {
+      height: 100vh;
+      width: 100%;
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  .main {  
+    display: block;
+    height: 100vh;
+    width: 100vw;
+    
+    .content {
+      height: 100%;
+      width: 100%;
+    }
   }
 }
