--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -112,3 +112,100 @@
     }
   }
 }
+
+@media only screen and (max-width: 600px) {
+
+  .main-section-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+
+    .main-section-wrapper {
+      height: 100%;
+      width: 100%;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+
+      .title {
+        color: white;
+        font-size: 50px;
+        font-weight: bold;
+      }
+
+      .custom-br {
+        display:block;
+        width: 25%;
+        height: 2px;
+        opacity: 0.3;
+        background-color: #fff;
+      }
+
+      .header {
+        font-size: 40px;
+      
+        .navigation {
+          height: 100%;
+          margin-right: 20px;
+      
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: flex-end;
+      
+          .link {
+            text-decoration: none;
+            color: white;
+            margin: 20px 0;
+          }
+        }
+      }
+    }
+  }
+  
+  .projects-container {
+    margin-top: 50vh;
+
+    .projects {
+      width: 100%;
+
+      display: flex;
+      flex-direction: column;
+
+      .item {
+        position: relative;
+        width: 100%;
+        list-style: none;
+        background-color: #181A1B;
+        cursor: pointer;
+        
+        .images {
+          height: 100%;
+          width: 100%;
+        }
+
+        .project-info {
+          position: absolute;
+          left: 0;
+          bottom: 20px;
+          width: calc(100% - 20px);
+
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          padding: 20px;
+          padding-left: 0;
+
+          background-color: #00000099;
+          color: rgba(255,255,255,0.8);
+
+          font-size: 50px;
+        }
+      }
+    }
+  }
+}
