Added page animations

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,9 @@
     <span class="custom-br"></span>
     <div class="header">
       <nav class="navigation">
-        <a class="link" href="/">work</a>
-        <a class="link" href="/about">about</a>
-        <a class="link" href="/contact">contact</a>
+        <a routerLink="/" routerLinkActive="active" class="link">work</a>
+        <a routerLink="/about" routerLinkActive="active" class="link">about</a>
+        <a routerLink="/contact" routerLinkActive="active" class="link">contact</a>
       </nav>
     </div>
 
