--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main" id="main">
   <div class="content">
-    <!-- <div [@routeAnimations]="prepareRoute(outlet)" > -->
-    <router-outlet></router-outlet>
-    <!-- </div> -->
+    <main [@fadeAnimation]="getRouterOutletState(o)">
+      <router-outlet #o="outlet"></router-outlet>
+    </main>
   </div>
 </div>
