Added all images and 3d models

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -22,7 +22,7 @@
         <div
           class="model-button"
           (click)="initialiseModel()"
-          *ngIf="project.model === true"
+          *ngIf="project.model !== false"
         >View in 3D</div>
       </div>
     </li>
