Fixed horizontal scrolling

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 <div class="projects-container">
-  <div class="projects">
+  <div class="projects" id="container">
     <li 
       class="item"
       *ngFor="let project of projects"
