--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 <div class="images-container">
-  <div class="images">
+  <div class="images" id="container">
     <li class="item">
       <div class="description">
         <span>Description:</span>
