--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,12 @@
 <div class="main-section-container">
-  <div class="main-section-wrapper">
-    
+  <div class="main-section-wrapper" [ngStyle]="{'opacity': menuOpacity, 'transform': 'scale(' + menuScale + ' )'}">
     <div class="title">{{ MainTitle }}</div>
     <span class="custom-br"></span>
     <div class="header">
       <nav class="navigation">
-        <a routerLink="/" routerLinkActive="active" class="link">work</a>
-        <a routerLink="/about" routerLinkActive="active" class="link">about</a>
-        <a routerLink="/contact" routerLinkActive="active" class="link">contact</a>
+        <a routerLink="/" routerLinkActive="active" class="link" id="work-link" alt="work">work</a>
+        <a routerLink="/about" routerLinkActive="active" class="link" id="about-link" alt="about">about</a>
+        <a routerLink="/contact" routerLinkActive="active" class="link" id="contact-link" alt="contact">contact</a>
       </nav>
     </div>
 
@@ -21,7 +20,10 @@
       (click)="onClick(project)"
     >
       <img src={{project.titleImage}} class="images"/>
-      <div class="project-info">{{ project.title }}</div>
+      <div class="project-info">
+        <div class="project-title">{{ project.title }}</div>
+        <div class="view-button">View</div>
+      </div>
     </li>
   </div>
 </div>
