--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,13 +1,13 @@
 <div id="main-section-container" class="main-section-container">
-  <div class="main-section-wrapper">
+  <div class="main-section-wrapper" [ngStyle]="{'opacity': menuOpacity, 'transform': 'scale(' + menuScale + ' )'}">
     
     <div class="title">{{ project.title }}</div>
     <span class="custom-br"></span>
     <div class="header">
       <nav class="navigation">
-        <a routerLink="/" routerLinkActive="active" class="link">work</a>
-        <a routerLink="/about" routerLinkActive="active" class="link">about</a>
-        <a routerLink="/contact" routerLinkActive="active" class="link">contact</a>
+        <a routerLink="/" routerLinkActive="active" class="link" id="work-link" alt="work">work</a>
+        <a routerLink="/about" routerLinkActive="active" class="link" id="about-link" alt="about">about</a>
+        <a routerLink="/contact" routerLinkActive="active" class="link" id="contact-link" alt="contact">contact</a>
       </nav>
     </div>
 
