Added back and next project buttons to project + home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,5 +25,8 @@
         <div class="view-button">View</div>
       </div>
     </li>
+    <li (click)="backButton()" class="item back-button">
+      ⟵ Back
+    </li>
   </div>
 </div>
