--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -86,12 +86,11 @@
     .item {
       position: relative;
       width: 40vw;
-      min-width: 300px;
+      min-width: 400px;
       height: 100vh;
       list-style: none;
       cursor: pointer;
       
-
       
       .images {
         height: 100%;
@@ -147,6 +146,22 @@
           opacity: 1;
           transform: translateY(0);
         }
+      }
+    }
+
+    .back-button {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      
+      opacity: 0.5;
+      color: white;
+      background-color: #000000;
+      transition: opacity 500ms ease;
+
+      &:hover {
+        opacity: 1;
       }
     }
   }
