--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -1,269 +1,179 @@
-// @media only screen and (min-width: 600px) {
-      
-  .main-section-container {
-    position: fixed;
-    width: 40vw;
-    min-width: 400px;
-    height: 100%;
-    display: inline-block;
+.main-section-container {
+  position: fixed;
+  width: 40vw;
+  min-width: 400px;
+  height: 100%;
+  display: inline-block;
 
-    .main-section-wrapper {
-      height: 100%;
-      width: 100%;
+  .main-section-wrapper {
+    height: 100%;
+    width: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+    .title {
+      color: white;
+      font-size: 50px;
+      font-weight: bold;
+    }
+
+    .custom-br {
+      display:block;
+      width: 25%;
+      height: 2px;
+      opacity: 0.3;
+      background-color: #fff;
+    }
+
+    .header {
+      font-size: 40px;
+    
+      .navigation {
+        height: 100%;
+        margin-right: 20px;
+    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
+    
+        .link {
+          text-decoration: none;
+          color: #ffffff88;
+          margin: 20px 0;
+          
+          &:before {
+            position: absolute;
+            opacity: 0;
+            content: attr(alt);
+            overflow: hidden;
+            color: #FFF;
+            transition: transform 500ms ease, opacity 500ms ease;
+          } 
+          
+          &:hover:before {
+            transform: translate(-2px, -2px);
+            opacity: 1;
+          }
+        }
+        .current-page {
+          &:before {
+            transform: translate(-2px, -2px);
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+}
+
+.images-container {
+  display: inline-block;
+  margin-left: 40vw;
+  
+  .images {
+    position: absolute;
+    top: 0;
+    height: 100%;
+
+    display: flex;
+    flex-direction: row;
+    
+    .item {
+      position: relative;
+      width: 50vw;
+      height: 100vh;
+      padding: 0 10px;
+      transition: width ease 500ms;
+      list-style: none;
+      background-color: #131414ea;
+
       
+      .description {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        height: calc(100% - 10vw);
+        width: calc(100% - 10vw);
+        
+        color: rgba(255, 255, 255, 0.6);
+        padding: 5vw;
+        font-size: 16px;
+        
+        span {
+          margin-bottom: 20px;
+          text-align: start;
+          color: white;
+        }
+        
+        .model-button {
+          position: relative;
+          margin-top: 40px;
+          padding: 20px;
+          background-color: #fff;
+          color: #000;
+          border-radius: 5px;
+          cursor: pointer;
+        }
+      }
+      
+      .image {
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+      }
+    }
+
+    .next-back-buttons {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-evenly;
+      padding: 0;
+      
+      .project-buttons {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
 
-      .title {
+        opacity: 0.4;
         color: white;
-        font-size: 50px;
-        font-weight: bold;
-      }
-
-      .custom-br {
-        display:block;
-        width: 25%;
-        height: 2px;
-        opacity: 0.3;
-        background-color: #fff;
-      }
-
-      .header {
-        font-size: 40px;
-      
-        .navigation {
-          height: 100%;
-          margin-right: 20px;
-      
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: flex-end;
-      
-          .link {
-            text-decoration: none;
-            color: #ffffff88;
-            margin: 20px 0;
-            
-            &:before {
-              position: absolute;
-              opacity: 0;
-              content: attr(alt);
-              overflow: hidden;
-              color: #FFF;
-              transition: transform 500ms ease, opacity 500ms ease;
-            } 
-            
-            &:hover:before {
-              transform: translate(-2px, -2px);
-              opacity: 1;
-            }
-          }
-          .current-page {
-            &:before {
-              transform: translate(-2px, -2px);
-              opacity: 1;
-            }
-          }
-        }
-      }
-    }
-  }
+        background-color: #000000;
+        transition: opacity 500ms ease;
+        cursor: pointer;
   
-  .images-container {
-    display: inline-block;
-    margin-left: 40vw;
-    
-    .images {
-      position: absolute;
-      top: 0;
-      height: 100%;
-
-      display: flex;
-      flex-direction: row;
-      
-      .item {
-        position: relative;
-        width: 50vw;
-        height: 100vh;
-        padding: 0 10px;
-        transition: width ease 500ms;
-        list-style: none;
-        background-color: #131414ea;
-
-        
-        .description {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          flex-direction: column;
-          height: calc(100% - 10vw);
-          width: calc(100% - 10vw);
-          
-          color: rgba(255, 255, 255, 0.6);
-          padding: 5vw;
-          font-size: 16px;
-          
-          span {
-            margin-bottom: 20px;
-            text-align: start;
-            color: white;
-          }
-          
-          .model-button {
-            position: relative;
-            margin-top: 40px;
-            padding: 20px;
-            background-color: #fff;
-            color: #000;
-            border-radius: 5px;
-            cursor: pointer;
-          }
+        &:hover {
+          opacity: 1;
         }
-        
-        .image {
-          height: 100%;
+
+        .next-image {
+          position: absolute;
+          top: 0;
+          left: 0;
           width: 100%;
-          object-fit: contain;
+          height: 50%;
+          object-fit: cover;
+        }
+        span {
+          z-index: 1;
+          background-color: #000000;
+          padding: 5px;
         }
       }
     }
+
   }
-// }
+}
 
 @media only screen and (max-width: 1000px) {
   .images-container {
     margin-left: 400px;
   }
 }
-
-
-// @media only screen and (max-width: 600px) {
-      
-//   .main-section-container {
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 50vh;
-
-//     .main-section-wrapper {
-//       height: 100%;
-//       width: 100%;
-
-//       display: flex;
-//       flex-direction: column;
-//       align-items: center;
-//       justify-content: space-evenly;
-
-//       .title {
-//         color: white;
-//         font-size: 50px;
-//         font-weight: bold;
-//       }
-
-//       .custom-br {
-//         display:block;
-//         width: 25%;
-//         height: 2px;
-//         opacity: 0.3;
-//         background-color: #fff;
-//       }
-
-//       .header {
-//         font-size: 40px;
-      
-//         .navigation {
-//           height: 100%;
-//           margin-right: 20px;
-      
-//           display: flex;
-//           flex-direction: column;
-//           align-items: center;
-//           justify-content: flex-end;
-      
-//           .link {
-//             text-decoration: none;
-//             color: #ffffff88;
-//             margin: 20px 0;
-            
-//             &:before {
-//               position: absolute;
-//               opacity: 0;
-//               content: attr(alt);
-//               overflow: hidden;
-//               color: #FFF;
-//               transition: transform 500ms ease, opacity 500ms ease;
-//             }
-//           }
-//           .current-page {
-//             &:before {
-//               transform: translate(-2px, -2px);
-//               opacity: 1;
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-  
-//   .images-container {
-//     margin-top: 50vh;
-    
-//     .images {
-//       width: 100%;
-
-//       display: flex;
-//       flex-direction: column;
-
-//       .item-colour {
-//         background-color: #181A1B;
-//       }
-
-//       .item {
-//         position: relative;
-//         width: 100%;
-//         list-style: none;
-        
-//         .description {
-//           display: flex;
-//           align-items: center;
-//           justify-content: center;
-//           flex-direction: column;
-//           height: calc(100% - 10vw);
-//           width: calc(100% - 10vw);
-
-//           color: rgba(255, 255, 255, 0.6);
-//           padding: 5vw;
-//           font-size: 16px;
-
-//           background-color: #131414ea;
-
-//           span {
-//             margin-bottom: 20px;
-//             text-align: start;
-//             color: white;
-//           }
-
-//           .model-button {
-//             position: relative;
-//             margin-top: 40px;
-//             padding: 20px;
-//             background-color: #fff;
-//             color: #000;
-//             border-radius: 5px;
-//             cursor: pointer;
-//           }
-//         }
-
-//         .image {
-//           height: 100%;
-//           width: 100%;
-//           object-fit: contain;
-//         }
-//       }
-//     }
-//   }
-// }
