--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
         <a routerLink="/contact" routerLinkActive="active" class="link" id="contact-link" alt="contact">contact</a>
       </nav>
     </div>
-
+    <div class="arrow">⟶</div>
   </div>
 </div>
 <div class="projects-container">
