--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -56,18 +56,44 @@
           } 
           
           &:hover:before {
-            transform: translate(-2px, -2px);
+            transform: translate(-1px, -1px);
             opacity: 1;
           }
         }
         .current-page {
           &:before {
-            transform: translate(-2px, -2px);
+            transform: translate(-1px, -1px);
             opacity: 1;
           }
         }
       }
     }
+    .arrow {
+      color: white;
+      font-size: 40px;
+      animation: arrow 2s ease infinite;
+    }
+  }
+}
+
+@keyframes arrow {
+  0% {
+    transform: translateX(0);
+  }
+  12.5% {
+    transform: translateX(50%);
+  }
+  25% {
+    transform: translateX(25%);
+  }
+  37.5% {
+    transform: translateX(50%);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
 
