--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -10,7 +10,8 @@
         <a routerLink="/contact" routerLinkActive="active" class="link" id="contact-link" alt="contact">contact</a>
       </nav>
     </div>
-
+    <div class="arrow">⟶</div>
+    
   </div>
 </div>
 <div class="images-container">
