--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -67,6 +67,32 @@
         }
       }
     }
+    .arrow {
+      color: white;
+      font-size: 40px;
+      animation: arrow 2s ease infinite;
+    }
+  }
+}
+  
+@keyframes arrow {
+  0% {
+    transform: translateX(0);
+  }
+  12.5% {
+    transform: translateX(50%);
+  }
+  25% {
+    transform: translateX(25%);
+  }
+  37.5% {
+    transform: translateX(50%);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
 
