--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -120,10 +120,17 @@
       pointer-events: all;
       cursor: pointer;
       
-      .images {
+      .image-container {
         height: 100%;
         width: 100%;
-        object-fit: cover;
+        overflow: hidden;
+        
+        .images {
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+          transition: transform 1s cubic-bezier(.62,.09,.19,1.06);
+        }
       }
 
       .project-info {
@@ -144,8 +151,10 @@
         .project-title {
           opacity: 0;
           color: white;
+          padding: 5px;
           font-size: 30px;
           font-weight: 100;
+          font-weight: bold;
 
           transform: translateY(-20px);
           transition: opacity 400ms 100ms ease, transform 400ms 100ms ease;
@@ -153,8 +162,8 @@
         
         .view-button {
           opacity: 0;
-          color: white;
-          background-color: black;
+          color: black;
+          background-color: white;
           padding: 15px 20px;
           border-radius: 5px;
 
@@ -173,6 +182,11 @@
         .view-button {
           opacity: 1;
           transform: translateY(0);
+        }
+      }
+      &:hover .image-container {
+        .images {
+          transform: scale(1.2);
         }
       }
     }
