Improved 3D environment, still need to add envmap lighting

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -35,7 +35,9 @@
     </li>
     <li class="next-back-buttons item">
       <a class="project-buttons" routerLink={{nextProjectURL}} routerLinkActive="active">
-        <img src={{nextProject.titleImage}} class="next-image">
+        <div class="next-project-image-container">
+          <img src={{nextProject.titleImage}} class="next-image">
+        </div>
         <span>Next Project ⟶</span>
       </a>
       <div (click)="backButton()" class="project-buttons">
