--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -179,20 +179,31 @@
         opacity: 0.4;
         color: white;
         background-color: #000000;
-        transition: opacity 500ms ease;
+        transition: all 500ms ease;
         cursor: pointer;
   
         &:hover {
           opacity: 1;
         }
 
-        .next-image {
+        .next-project-image-container {
           position: absolute;
           top: 0;
           left: 0;
           width: 100%;
           height: 50%;
-          object-fit: cover;
+          overflow: hidden;
+
+          .next-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 1s cubic-bezier(.62,.09,.19,1.06);
+            
+            &:hover {
+              transform: scale(1.2);
+            }
+          }
         }
         span {
           z-index: 1;
