--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
   display: block;
   position: fixed;
   overflow-x: scroll;
-  overflow-y: hidden;
+  // overflow-y: hidden;
   height: 100vh;
   width: 100vw;
   scrollbar-width: none;
